--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.0.0",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "vue-socket.io": "^3.0.10"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
