--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.16.4",
     "nuxt": "^2.0.0",
     "socket.io": "^4.1.3",
-    "vue-socket.io": "^3.0.10"
+    "socket.io-client": "^4.1.3",
+    "vue-socket.io": "^3.0.5",
+    "vue-socket.io-extended": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
